<resources>
    <string name="app_name">MuseumAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Музей Янтаря</string>
    <string name="nav_header_subtitle">Пн-Пт 10:00-19:00 Сб-Вс 9:00-20:00</string>
    <string name="nav_header_desc">Головное меню</string>
    <string name="action_settings">Настройки</string>

<!--   review-->
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="average_rating">Рейтинг</string>
    <string name="add_review">Создать отзыв</string>



    <!-- INFO -->
        <string name="museum_info">Информация о музее</string>


        <string name="museum_about">Единственный в России Музей янтаря был открыт в 1979 году. Он расположен в центре Калининграда на берегу озера Верхнее в крепостной башне середины ХIХ века.\n\n

Башня была построена в 1853 году под руководством разработчика общего плана крепостных сооружений Кёнигсберга шефа инженерного корпуса Эрнста Людвига фон Астера и входила в систему городских оборонительных укреплений. Она носила имя прусского генерал-фельдмаршала Фридриха Карла Дона, участника освободительной войны против наполеоновского нашествия. Здание является также памятником Второй мировой войны.\n

Музей янтаря – это музей одного минерала. Экспозиция расположена на трех этажах здания общей площадью около 1000 кв. метров. По содержанию она делится на естественно-научную и культурно-историческую части.\n

Янтарь – это окаменевшая смола древних хвойных деревьев, произраставших более 40 млн. лет назад на современной территории Скандинавского полуострова и прилегающих к нему областях дна Балтийского моря.\n

В естественно-научном разделе собрания представлены различные по весу, цветовой гамме, степени прозрачности образцы янтаря. В экспозиции находится самый крупный в России «солнечный камень»: его вес – 4 кг 280 г. Значительную часть коллекции составляют образцы янтаря с включениями остатков животных и растительных организмов, попавших десятки миллионов лет назад в некогда жидкую и вязкую смолу. Включения в балтийском янтаре представляют большой научный интерес благодаря своему разнообразию и превосходной сохранности. Они ценны для уточнения наших знаний о флоре и фауне, а также климатических условиях на Земле 40 – 45 млн. лет назад. На сегодняшний день коллекция Калининградского музея янтаря является главным российским национальным фондом инклюзов в балтийском янтаре.</string>



        <string name="museum_address">Адрес музея: 236016, г. Калининград, пл. Маршала Василевского, 1.</string>


        <string name="museum_working_hours">Рабочие часы: Пн-Пт 10:00-19:00 Сб-Вс 9:00-20:00</string>


        <string name="privacy">© 2005 — 2023 ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ КУЛЬТУРЫ "КАЛИНИНГРАДСКИЙ ОБЛАСТНОЙ МУЗЕЙ ЯНТАРЯ". Все права защищены.</string>


        <string name="museum_contact_info">Контакты:\n
            тел./факс +7 (4012) 466-550, e-mail: office@ambermuseum.ru – приемная;\n
            тел./факс +7 (4012) 466-888, e-mail: info@ambermuseum.ru – отдел информации;\n
            тел./факс +7 (4012) 538-219, e-mail: visitor@ambermuseum.ru – заказ экскурсий.</string>


        <string name="app_info">Информация о приложении и авторе</string>


        <string name="app_description1">TMuseum AR - это приложение, которое поможет вам узнать больше об экспонатах, новостях и событиях музея с помощью дополненной реальности.</string>


        <string name="about_author">Об авторе: Сергей Мортано/Щукин, просто странный студент </string>


        <string name="contact_info">Контакты: mortanogc@gmail.com</string>


        <string name="app_version">Версия: 1.1.2</string>

<!--permission-->
<string name="permissions_not_granted">Не все разрешения выданы</string>

    <string name="hello_blank_fragment">Привет в пустой бланк, как ты сюда попал?</string>

        <!-- ... -->
        <string name="welcome">Добро пожаловать в Museum AR!</string>
        <string name="app_description">Museum AR - это приложение, которое поможет вам узнать больше об экспонатах, новостях и событиях музея с помощью дополненной реальности. Путешествуйте по музею, открывайте новые экспонаты и делитесь своими отзывами!\n</string>
        <string name="app_description_2">Данное приложение было создано специально для курсовой работы и является частью крупного проекта</string>
<!--   отзывы     -->
    <string name="fullscreen_image_content_description">Полноэкранное изображение</string>
</resources>