<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.MuseumInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/museum_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museum_info"
            android:textStyle="bold"
            android:textColor="@color/orange_dark"
            android:textSize="23sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/museum_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museum_about"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/museum_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museum_address"
            android:textStyle="italic"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/museum_working_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museum_working_hours"
            android:textStyle="italic"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/museum_contact_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museum_contact_info"
            android:textStyle="italic"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="16sp"
            android:textColor="@color/green_dark"
            android:textStyle="bold"
            />
    </LinearLayout>
</ScrollView>
